<resources>
    <string name="app_name">QuickResto</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidGltb3RpdXMiLCJhIjoiY2tmcGU3eWx1MDliODJ4bzdidjhtc3UxcSJ9.cUFRtvmdkgsS6fiwZEuxow</string>
    <string name="intro">Lets start your Journey with us</string>
    <string name="intro2">Find more convenience in the reservation of the restaurant of your choice</string>
    <string name="hint">Email</string>
    <string name="hint2">Password</string>
    <string name="hint3">Phone</string>
    <string name="hint4">Full Name</string>
    <string name="hint5">New Password</string>
    <string name="hint6">Confirm Password</string>
</resources>